# file-organizer

./: .gitignore  File_Organiser_Based_On_Extensions.py  README.md  TTSEngine_Handler.py  main.py  modifier.py  pyproject.toml  requirements.txt  watcher.py
assets/: animated_print.py  extensions_asset.py
logs/: bugs_and_suggestions.txt
refactor/: BackupManager.py  Classifier.py  Exceptions.py  FileOrganizer.py  Logger.py  Status.py  config.yaml  main.py
src/: BackupManager.py  Classifier.py  FileOrganizer.py  main.py
src/assets/: animated_print.py  extensions_asset.py
src/fileorganizer/: BackupManager.py  Classifier.py  Exceptions.py  FileOrganizer.py  Filters.py  Logger.py  config.yaml  main.py
tests/: conftest.py  test_backup_manager.py  test_file_open_causes_failure.py  test_integration.py  test_open_file.py  utils.py
