[project]
authors = [
    {name = "Krishna Sharma K", email = "krishnasharma.k2023@vitstudent.ac.in"}
]
dependencies = [
    "customTkinter==5.2.2",
    "PyAutoGUI==0.9.54",
    "pyyaml==6.0.3",
    "typing-extensions>=4.15.0",
]
desciption = "File extension based file organizer"
license = {file = "LICENSE"}
name = "file-organizer"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
version = "2.0.0"

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[tool.poetry]
include = ["fileorganizer/config.yaml"]
packages = [
    { include = "fileorganizer", from="src"},
    { include = "assets", from="src"}
]

[tool.poetry.scripts]
file-organizer = "fileorganizer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.urls]
GitHub = "https://github.com/krishnasharmak05/file-organizer"
Issues = "https://github.com/krishnasharmak05/file-organizer/issues"

[dependency-groups]
dev = [
    "portalocker (>=3.2.0,<4.0.0)",
    "pytest>=9.0.2",
]
